src/librustdoc/html/static/rustdoc.css
/* ... */
h1.fqn {
	border-bottom: 1px dashed;
	margin-top: 0;
}
h1.fqn > .in-band > a:hover {
	text-decoration: underline;
}
h2, h3:not(.impl):not(.method):not(.type):not(.tymethod),
h4:not(.method):not(.type):not(.tymethod):not(.associatedconstant) {
	border-bottom: 1px solid;
}
h3.impl, h3.method, h4.method, h3.type, h4.type, h4.associatedconstant {
	flex-basis: 100%;
	font-weight: 600;
	margin-top: 16px;
	margin-bottom: 10px;
	position: relative;
}
h3.impl, h3.method, h3.type {
	padding-left: 15px;
}

h1, h2, h3, h4,
.sidebar, a.source, .search-input, .content table td:first-child > a,
.collapse-toggle, div.item-list .out-of-band,
#source-sidebar, #sidebar-toggle,
/* This selector is for the items listed in the "all items" page. */
#main > ul.docblock > li > a {
	font-family: "Fira Sans", sans-serif;
}

.content ul.crate a.crate {
	font: 16px/1.6 "Fira Sans";
}

ol, ul {
	padding-left: 25px;
}
ul ul, ol ul, ul ol, ol ol {
	margin-bottom: .6em;
}

p {
	margin: 0 0 .6em 0;
}

summary {
	outline: none;
}

code, pre, a.test-arrow {
	font-family: "Source Code Pro", monospace;
}
.docblock code, .docblock-short code {
	border-radius: 3px;
	padding: 0 0.1em;
}
.docblock pre code, .docblock-short pre code, .docblock code.spotlight {
	padding: 0;
}
.docblock code.spotlight :last-child {
	padding-bottom: 0.6em;
}
pre {
	padding: 14px;
}

.source .content pre {
	padding: 20px;
}

img {
	max-width: 100%;
}

li {
	position: relative;
}

.source .content {
	margin-top: 50px;
	max-width: none;
	overflow: visible;
	margin-left: 0px;
	min-width: 70em;
}

nav.sub {
	font-size: 16px;
	text-transform: uppercase;
}

.sidebar {
	width: 200px;
	position: fixed;
	left: 0;
	top: 0;
	bottom: 0;
	overflow: auto;
}

/* Improve the scrollbar display on firefox */
* {
	scrollbar-width: initial;
}
.sidebar {
	scrollbar-width: thin;
}

/* Improve the scrollbar display on webkit-based browsers */
::-webkit-scrollbar {
	width: 12px;
}
.sidebar::-webkit-scrollbar {
	width: 8px;
}
::-webkit-scrollbar-track {
	-webkit-box-shadow: inset 0;
}

.sidebar .block > ul > li {
	margin-right: -10px;
}

.content, nav {
	max-width: 960px;
}

/* Everything else */

.hidden {
	display: none !important;
}

.logo-container {
	height: 100px;
	width: 100px;
	position: relative;
	margin: 20px auto;
	display: block;
	margin-top: 10px;
}

.logo-container > img {
	max-width: 100px;
	max-height: 100px;
	position: absolute;
	left: 50%;
	top: 50%;
	transform: translate(-50%, -50%);
	display: block;
}

.sidebar .location {
	border: 1px solid;
	font-size: 17px;
	margin: 30px 10px 20px 10px;
	text-align: center;
	word-wrap: break-word;
}

.sidebar .version {
	font-size: 15px;
	text-align: center;
	border-bottom: 1px solid;
	overflow-wrap: break-word;
	word-wrap: break-word; /* deprecated */
	word-break: break-word; /* Chrome, non-standard */
}

.location:empty {
	border: none;
}

.location a:first-child {
	font-weight: 500;
}

.block {
	padding: 0;
	margin-bottom: 14px;
}
.block h2, .block h3 {
	margin-top: 0;
	margin-bottom: 8px;
	text-align: center;
}
.block ul, .block li {
	margin: 0 10px;
	padding: 0;
	list-style: none;
}

.block a {
	display: block;
	text-overflow: ellipsis;
	overflow: hidden;
	line-height: 15px;
	padding: 7px 5px;
	font-size: 14px;
	font-weight: 300;
	transition: border 500ms ease-out;
}

.sidebar-title {
	border-top: 1px solid;
	border-bottom: 1px solid;
	text-align: center;
	font-size: 17px;
	margin-bottom: 5px;
}

.sidebar-links {
	margin-bottom: 15px;
}

.sidebar-links > a {
	padding-left: 10px;
	width: 100%;
}

.sidebar-menu {
	display: none;
}

.content {
	padding: 15px 0;
}

.source .content pre.rust {
	white-space: pre;
	overflow: auto;
	padding-left: 0;
}

.rustdoc:not(.source) .example-wrap {
	display: inline-flex;
	margin-bottom: 10px;
	position: relative;
}

.example-wrap {
	width: 100%;
}

.example-wrap > pre.line-number {
	overflow: initial;
	border: 1px solid;
	border-top-left-radius: 5px;
	border-bottom-left-radius: 5px;
	padding: 13px 8px;
	text-align: right;
}

.rustdoc:not(.source) .example-wrap > pre.rust {
	width: 100%;
	overflow-x: auto;
}

.rustdoc:not(.source) .example-wrap > pre {
	margin: 0;
}

#search {
	margin-left: 230px;
	position: relative;
}

#results {
	position: absolute;
	right: 0;
	left: 0;
	overflow: auto;
}

#results > table {
	width: 100%;
	table-layout: fixed;
	margin-bottom: 40px;
}

.content pre.line-numbers {
	float: left;
	border: none;
	position: relative;

	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}
.line-numbers span {
	cursor: pointer;
}

.docblock-short {
	overflow-wrap: anywhere;
}
.docblock-short p {
	display: inline;
}

.docblock-short p {
	overflow: hidden;
	text-overflow: ellipsis;
	margin: 0;
}
.docblock code, .docblock-short code {
	white-space: pre-wrap;
}

.docblock h1, .docblock h2, .docblock h3, .docblock h4, .docblock h5 {
	border-bottom: 1px solid;
}

#main > .docblock h1 { font-size: 1.3em; }
#main > .docblock h2 { font-size: 1.15em; }
#main > .docblock h3, #main > .docblock h4, #main > .docblock h5 { font-size: 1em; }

#main > h2 + div, #main > h2 + h3, #main > h3 + div {
	display: none; /* Changed to flex or block via js once the page is loaded */
	flex-wrap: wrap;
}

.docblock h1 { font-size: 1em; }
.docblock h2 { font-size: 0.95em; }
.docblock h3, .docblock h4, .docblock h5 { font-size: 0.9em; }

.docblock {
	margin-left: 24px;
	position: relative;
}

.content .out-of-band {
	float: right;
	font-size: 23px;
	margin: 0px;
	padding: 0px;
	font-weight: normal;
}

h3.impl > .out-of-band {
	font-size: 21px;
}

h4.method > .out-of-band {
	font-size: 19px;
}

h4 > code, h3 > code, .invisible > code {
	max-width: calc(100% - 41px);
	display: block;
}

.invisible {
	width: 100%;
	display: inline-block;
}

.content .in-band {
	margin: 0px;
	padding: 0px;
}

.in-band > code {
	display: inline-block;
}

#main {
	position: relative;
}
#main > .since {
	top: inherit;
	font-family: "Fira Sans", sans-serif;
}
/* ... */

